kubernetes/edge/apps/flux-system/addons/app/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    external-dns.kubernetes.io/target: internal.haynesedge
spec:
  ingressClassName: traefik-internal
  rules:
    - host: flux-webhook.haynesedge.com
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
